bugfix: login-icon in footer should not wrap to next line -> new class div.lzy-login-link -> float:right

--- a/css/scss/lizzy_basics.scss
+++ b/css/scss/lizzy_basics.scss
@@ -469,7 +469,8 @@ footer {
 		height: 1.2em;
 	}
 	#loggedInUser, 
-    .loggedInUser {
+    .loggedInUser,
+    .loggedInUser div.lzy-login-link {
 		float: right;
 	}
 }
